--- a/directConsultas/www/index.html
+++ b/directConsultas/www/index.html
@@ -16,6 +16,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="js/ng-cordova.min.js" type="text/javascript"></script>
     <script src="cordova.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/app.js"></script>
@@ -31,12 +32,13 @@
       The nav bar that will be updated as we navigate between views.
     -->
     <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
+        <ion-nav-back-button style="margin-top: 10px;color:#d06b08;" class="button-clear">
+            <i style="color:#d06b08;top: 5px;position: relative;" class="ion-ios-arrow-left"></i> Atrás
+        </ion-nav-back-button>
     </ion-nav-bar>
 
-    <ion-header-bar style="border-bottom: 2.5px solid #17499c; height: 60px;">
-      <center><img src="img/drawable-xhdpi/header_logo.png" style="width: 30%; margin-top: 5px;"></center>
+    <ion-header-bar style="border-bottom: 2.5px solid #17499c; height: 65px;">
+      <center><img src="img/drawable-xhdpi/header_logo.png" style="width: 30%; margin-top: -10px;"></center>
     </ion-header-bar>
 
     <!--
